[package]
name = "agicash-web-leptos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# The crate ships as a single wasm cdylib loaded by `index.html`. We also
# keep the `rlib` crate-type so the workspace `cargo test` can pick up
# the unit tests on native (the pure-Rust pieces — tokens, design helpers,
# anything not gated behind `target_arch = "wasm32"`).
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Browser-side build is the ONLY shipping target now — the axum SSR
# server was ripped on 2026-05-17 in favour of pure CSR + direct
# `OpenSecretClient` calls from wasm. Refresh token persists in
# `window.localStorage` via `BrowserSessionStorage` (parity with the
# legacy React app's convention).
default = ["hydrate"]
hydrate = ["leptos/hydrate"]

[dependencies]
# Leptos 0.7 — fine-grained reactivity, stable reactive-graph.
# Note: not using the `nightly` features; the workspace toolchain pins
# to stable rust 1.88 (see `crates/rust-toolchain.toml`).
leptos = { version = "0.7" }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
http = "1"

# CDK — Cashu Development Kit. We only use the parser side here
# (`cdk::nuts::Token::from_str` + `.value()/.mint_url()/.unit()/.memo()`),
# which is wasm-clean with `default-features = false, features = ["wallet"]`
# (the workspace dep already pins those — see `crates/Cargo.toml`,
# `project_agicash_wasm_path.md` for context).
cdk = { workspace = true }

# Direct opensecret client — wasm-compatible per the
# audit/auth-opensecret-wasm work. Disable default features so the
# native-only `keyring-storage` cargo feature stays off (it's gated by
# `target_arch` anyway, but skipping the dependency at request time
# keeps the dep graph clean).
agicash-auth-opensecret = { path = "../agicash-auth-opensecret", default-features = false }
agicash-traits = { path = "../agicash-traits" }

# Browser-side runtime deps. Always-on now that ssr is gone — the
# `target_arch = "wasm32"` cfg in `lib.rs::hydrate` keeps the native
# `rlib` build (for unit tests) from trying to pull these in.
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
console_error_panic_hook = "0.1"
# `gloo-timers` gives us a wasm-safe Future-based sleep. Used by the
# mocked Cashu redeem path to simulate the WalletClient round-trip
# (see `// TODO[slice-12]` in `components/cashu_token_paste_view.rs`).
gloo-timers = { version = "0.3", default-features = false, features = ["futures"] }
# `gloo-net` — wasm-native fetch wrapper used by `WalletData::refresh`
# to call Supabase PostgREST directly. Bypasses the
# `agicash-storage-supabase` typed layer (which is not yet wasm-compat
# due to rustls/ring/tokio-net pulls — see follow-up spec
# `2026-05-17-storage-supabase-wasm-port-design.md`). The end-state
# replaces this with `SupabaseStorage::list_accounts` once the port
# lands; the signal shape on `WalletData` stays the same.
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"] }
# `js-sys` + `web-sys` — used by the `ShareSheet` component to call the
# Web Share API (`navigator.share`) with a clipboard fallback, and by
# the LoginView's guest-auth path for getrandom-on-wasm wiring.
js-sys = { workspace = true }
web-sys = { version = "0.3", features = [
    "Clipboard",
    "Document",
    "Element",
    "HtmlMetaElement",
    "Navigator",
    "Window",
    "Storage",
    "ShareData",
] }

# `getrandom` for the throwaway guest-registration password. Wasm
# support requires the `js` feature; the native `rlib` build doesn't
# need it but the feature is additive so it's safe to enable
# unconditionally.
getrandom = { workspace = true, features = ["js"] }

[lints]
workspace = true
