[package]
# Standalone manifest (not a workspace member). The agicash Rust workspace
# lives under `../../../crates/` and uses `crates/Cargo.toml` as its root —
# from this directory cargo's workspace discovery walks up and never finds it.
# Mirror the swift wrapper at ../../swift/rust/.
name = "agicash-ffi-kotlin"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/MakePrisms/agicash"
description = "Kotlin/Android bindings wrapper for the Agicash FFI"

[lib]
crate-type = ["cdylib"]
name = "agicash_ffi_kotlin"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
agicash-ffi = { path = "../../../crates/agicash-ffi" }
# `bindgen` + `cli` features pull in the Kotlin binding generator and the
# multi-language CLI wrapper. The custom `uniffi-bindgen` bin below just
# invokes uniffi::uniffi_bindgen_main() which dispatches on `--language`.
uniffi = { version = "0.30", features = ["cli", "bindgen", "cargo-metadata"] }

[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }

# The standalone wrapper has its own dependency resolution graph and cannot
# inherit the workspace's `[patch.crates-io]` table from `crates/Cargo.toml`.
# Mirror it here so the local opensecret + postgrest forks (which the auth
# and storage crates require) are picked up.
[patch.crates-io]
opensecret = { path = "/Users/claude/opensecret-sdk-fork/rust" }
postgrest = { path = "/Users/claude/postgrest-rs-fork" }
